<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tv_title"
            android:text="@string/choose_level_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_tv_title"
            android:textStyle="bold" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_level_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:text="@string/test_level" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_level_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:backgroundTint="@color/green"
            android:text="@string/easy_level" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_level_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:backgroundTint="@color/yellow"
            android:text="@string/normal_level" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_level_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_button"
            android:layout_marginEnd="@dimen/margin_end_button"
            android:backgroundTint="@color/red"
            android:text="@string/hard_level" />

    </LinearLayout>
</layout>